Add support for having multiple of the same property decorators

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
 		"declaration": true,
 		"plugins": [
 			{
-				"transform": "../flamework-transformer",
+				"transform": "rbxts-transformer-flamework",
 				"$rbxpackmode$": true,
 				"hashPrefix": "$",
 			}
