--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-roblox-ts": "0.0.25",
     "prettier": "^2.2.1",
+    "rbxts-transformer-flamework": "^1.0.0-beta.11",
     "roblox-ts": "^1.3.3",
     "typescript": "^4.3.2"
   },
